--- a/src/views/usuarios.html
+++ b/src/views/usuarios.html
@@ -86,64 +86,48 @@
                             <div class="row">
                                 <div class="col-md-10 pb-2">
                                     <div class="form-outline">
-                                        <label class="form-label">Raza</label>
-                                        <select class="form-select form-select-lg mb-3" aria-label=".form-select-lg race">
-                                            <option >Angus</option>
-                                            <option >Hereford</option>
-                                            <option >Nerole</option>
-                                            <option >Brahman</option>
-                                            <option >Pardo</option>
-                                            <option >Brangus</option>
-                                            <option >Cebú</option>
-                                            <option >Criolla</option>
-                                        </select>
+                                        <label class="form-label">Nombre</label>
+                                        <input type="text" id="userName" class="form-control form-control-lg" />
+                                    </div>
+                                </div>
+                                <div class="col-md-10 pb-2">
+                                    <div class="form-outline">
+                                        <label class="form-label">Apellido</label>
+                                        <input type="text" id="usarLastName" class="form-control form-control-lg" />
+                                    </div>
+                                </div>
+                                <div class="col-md-10 pb-2">
+                                    <div class="form-outline">
+                                        <label class="form-label">Correo electrónico</label>
+                                        <input type="text" id="userEmail" class="form-control form-control-lg" />
                                     </div>
                                 </div>
                                 <div class="col-md-11 mb-4 pb-2">
                                     <div class="form-outline">
-                                        <label class="form-label">Sexo</label><br>
+                                        <label class="form-label">Tipo de usuario</label><br>
                                         <div class="form-check form-check-inline">
-                                            <input class="form-check-input" type="radio" name="inlineRadioOptions" id="radioMacho" value="macho">
-                                            <label class="form-check-label" for="inlineRadio1">Macho</label>
+                                            <input class="form-check-input" type="radio" name="inlineRadioOptions" id="radioAdmin" value="administrador">
+                                            <label class="form-check-label" for="inlineRadio1">Administrador</label>
                                         </div>
                                         <div class="form-check form-check-inline">
-                                            <input class="form-check-input" type="radio" name="inlineRadioOptions" id="radioHembra" value="hembra">
-                                            <label class="form-check-label" for="inlineRadio2">Hembra</label>
+                                            <input class="form-check-input" type="radio" name="inlineRadioOptions" id="radioUser" value="usuario">
+                                            <label class="form-check-label" for="inlineRadio2">Usuario comercial</label>
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col-md-11 mb-4 pb-2">
+                                <div class="col-md-10 pb-2">
                                     <div class="form-outline">
-                                        <label class="form-label">Fecha de Nacimiento</label>
-                                        <input type="date" id="form1" class="form-control form-control-lg" />
+                                        <label class="form-label">Contraseña</label>
+                                        <input type="password" id="userPassword" class="form-control form-control-lg" />
                                     </div>
                                 </div>
-                                <div class="col-md-11 mb-4 pb-2">
+                                <div class="col-md-10 pb-2">
                                     <div class="form-outline">
-                                        <label class="form-label">Origen</label><br>
-                                        <div class="form-check form-check-inline">
-                                            <input class="form-check-input" type="radio" name="radioorigen" id="radioNatural" value="natural">
-                                            <label class="form-check-label" for="inlineRadio1">Natural</label>
-                                        </div>
-                                        <div class="form-check form-check-inline">
-                                            <input class="form-check-input" type="radio" name="radioorigen" id="radioCompra" value="compra">
-                                            <label class="form-check-label" for="inlineRadio2">Compra</label>
-                                        </div>
+                                        <label class="form-label">Confirmar Contraseña</label>
+                                        <input type="password" id="userConfirm" class="form-control form-control-lg" />
                                     </div>
                                 </div>
-                                <div class="col-md-10 pb-2" id="hidePadres">
-                                    <div class="form-outline">
-                                        <label class="form-label">Seleccione padre</label>
-                                        <select class="form-select form-select-lg mb-3" aria-label=".form-select-lg race">
-                                            <option >Angus</option>
-                                        </select><br>
-                                        <label class="form-label">Seleccione madre</label>
-                                        <select class="form-select form-select-lg mb-3" aria-label=".form-select-lg race">
-                                            <option >Angus</option>
-                                        </select>
-                                    </div>
-                                </div>
-                                <div class="col-md-10 pb-2" id="buttonAddCow">
+                                <div class="col-md-10 pb-2" id="buttonAddFinca">
                                     <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#modalNewCow">
                                         Agregar
                                     </button>
