--- a/src/views/fincas.html
+++ b/src/views/fincas.html
@@ -50,7 +50,7 @@
 
     <section class="seccion contenedor">
         <div class="container ">
-            <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#modalAddFarm">
+            <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#modalAddFarm" id="btnModalAddFarm">
                 Agregar Finca
             </button>
             <div class="table-responsive">
