--- a/src/views/login.html
+++ b/src/views/login.html
@@ -17,14 +17,16 @@
             <h3>Ingrese sus credenciales</h3>
     
             <label for="username">Usuario</label>
-            <input type="text" placeholder="Correo electrónico" id="username">
+            <input type="text" placeholder="Correo electrónico" id="email">
     
             <label for="password">Contraseña</label>
             <input type="password" placeholder="****" id="password">
     
-            <button class="boton-login">Ingresar</button>
+            <button class="boton-login" id="buttonLogin">Ingresar</button>
         </form>
     </div>
+
+    <script src="./utils/login.js"></script>
     
 </body>
 
