--- a/src/views/login.html
+++ b/src/views/login.html
@@ -17,10 +17,10 @@
             <h3>Ingrese sus credenciales</h3>
     
             <label for="username">Usuario</label>
-            <input type="text" placeholder="Correo electrónico" id="email">
+            <input type="text" placeholder="Correo electrónico" id="email" name="email">
     
             <label for="password">Contraseña</label>
-            <input type="password" placeholder="****" id="password">
+            <input type="password" placeholder="****" id="password" name="password">
     
             <button class="boton-login" id="buttonLogin">Ingresar</button>
         </form>
